--- a/index.html
+++ b/index.html
@@ -8,11 +8,7 @@
   </head>
 
   <body>
-    <script type="module">
-      import { main } from "./src/pages/playground/index.ts"
-      window.onload = () => main()
-    </script>
-
-    <canvas id="canvas"></canvas>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
